# Warframe-Checklist

./: Cargo.toml  LICENSE.md  flake.nix  get_new_data.sh  transform.sh
frontend/static/: index.html  list.html
frontend/static/css/: list.css
frontend/static/js/: list.js  main.js
src/: db.rs  main.rs  mod_data.rs  routes.rs
